Fix backgrounds and margins of selected subscriptionlist element in dark mode

--- a/skins/elastic/styles/dark.less
+++ b/skins/elastic/styles/dark.less
@@ -271,9 +271,15 @@ html.dark-mode {
         .hover {
             background-color: @color-dark-list-droptarget-background;
         }
+        .ui-sortable-helper {
+            background-color: rgba(@color-dark-background, 50%);
+
+            &.selected > a {
+                background-color: rgba(@color-dark-list-selected-background, 0.7);
+            }
+        }
     }
 
-    .listing li.selected,
     .listing li.selected > a,
     .listing li.selected > div > a, // this is used e.g. by kolab_addressbook
     .listing tr.selected td {
@@ -281,12 +287,8 @@ html.dark-mode {
         background-color: @color-dark-list-selected-background;
     }
 
-    .listing li.selected ul {
-        background-color: @color-dark-background;
-
-        div.treetoggle {
-            color: @color-dark-font;
-        }
+    .listing li.selected ul div.treetoggle {
+        color: @color-dark-font;
     }
 
     .listing {
